[package]
name = "battleship_ws"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
warp = "0.3.7"
